testsuite/tests/typing-gadts/pr5332.ml.reference

#       type ('env, 'a) var =
    Zero : ('a * 'env, 'a) var
  | Succ : ('env, 'a) var -> ('b * 'env, 'a) var
#         type ('env, 'a) typ =
    Tint : ('env, int) typ
  | Tbool : ('env, bool) typ
  | Tvar : ('env, 'a) var -> ('env, 'a) typ
#             Characters 162-163:
     | _ -> .   (* error *)
       ^
Error: This match case could not be refuted.
       Here is an example of a value that would reach it: (Tint, Tvar Zero)
#   
